Refactor block panel animation

--- a/src/components/panels/blockPanel/blockPanel.module.css
+++ b/src/components/panels/blockPanel/blockPanel.module.css
@@ -1,28 +1,21 @@
-@reference "../../../lib/css/global.css";
+.full-bar {
+    animation: bar-animation 200ms linear forwards;
+    background: var(--color-other-tonal-fill10);
 
-.bar {
-    @apply bg-other-tonal-fill10 rounded-xs;
-    @apply h-2.5 w-1.25 sm:h-9 sm:w-1 xl:h-10! xl:w-1.25!;
+    &.delayed-1 {
+        animation-delay: 75ms;
+    }
 
-    &.full {
-        animation: bar-animation 200ms linear forwards;
-        background: var(--color-other-tonal-fill10);
+    &.delayed-2 {
+        animation-delay: 150ms;
+    }
 
-        &.delayed-1 {
-            animation-delay: 75ms;
-        }
+    &.delayed-3 {
+        animation-delay: 225ms;
+    }
 
-        &.delayed-2 {
-            animation-delay: 150ms;
-        }
-
-        &.delayed-3 {
-            animation-delay: 225ms;
-        }
-
-        &.delayed-4 {
-            animation-delay: 300ms;
-        }
+    &.delayed-4 {
+        animation-delay: 300ms;
     }
 }
 
@@ -58,10 +51,18 @@
 }
 
 .cube {
-    transform: rotateX(-35deg) rotateY(0deg);
+    transform: rotateX(-35deg) rotateY(45deg);
 
-    &.animated {
-        animation: cube-animation 3s linear infinite;
+    &.rotate-infinite {
+        animation: cube-full-rotation-animation 3s linear infinite;
+    }
+
+    &.rotate-first-half {
+        animation: cube-first-half-rotation-animation 500ms ease-in-out reverse;
+    }
+
+    &.rotate-second-half {
+        animation: cube-second-half-rotation-animation 500ms ease-in-out reverse;
     }
 
     .face {
@@ -91,11 +92,32 @@
     }
 }
 
-@keyframes cube-animation {
+@keyframes cube-full-rotation-animation {
     from {
-        transform: rotateX(-35deg) rotateY(0deg);
+        transform: rotateX(-35deg) rotateY(45deg);
     }
+
     to {
-        transform: rotateX(-35deg) rotateY(360deg);
+        transform: rotateX(-35deg) rotateY(405deg);
+    }
+}
+
+@keyframes cube-first-half-rotation-animation {
+    from {
+        transform: rotateX(-35deg) rotateY(45deg);
+    }
+
+    to {
+        transform: rotateX(-35deg) rotateY(225deg);
+    }
+}
+
+@keyframes cube-second-half-rotation-animation {
+    from {
+        transform: rotateX(-35deg) rotateY(225deg);
+    }
+
+    to {
+        transform: rotateX(-35deg) rotateY(405deg);
     }
 }
